[project]
name = "oci-lb-log-custom-mcp"
version = "0.1.0"
description = "MCP server for OCI Load Balancer custom log queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "oci",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
oci-lb-logs = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_server.py"]
